# NirnLabUIPlatform

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  WinBuild.ps1  WinBuildLocal.ps1  WinInit.ps1  vcpkg.json
cmake/: set_compile_options.cmake
overlay_ports/cef-prebuilt/: CMakeLists.txt  portfile.cmake  vcpkg.json
overlay_ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
src/: Version.h.in  Version.rc.in
src/CEFSubprocess/: IPC.h  PCH.h  ProcessDownDetector.cpp  ProcessDownDetector.h  main.cpp
src/CEFSubprocess/CEF/: CEFV8ContextGuard.h  NirnLabSubprocessCefApp.cpp  NirnLabSubprocessCefApp.h
src/CEFSubprocess/Converters/: CEFValueConverter.cpp  CEFValueConverter.h
src/CEFSubprocess/JS/: CEFEventFunctionHandler.cpp  CEFEventFunctionHandler.h  CEFFunctionHandler.cpp  CEFFunctionHandler.h  CEFFunctionQueue.cpp  CEFFunctionQueue.h
src/CEFSubprocess/Log/: IPCLogSink.hpp
src/UIPlatform/: PCH.h  main.cpp
src/UIPlatform/CEF/: CEFBrowser.cpp  CEFBrowser.h  DefaultBrowser.cpp  DefaultBrowser.h  IBrowser.h  NirnLabCefApp.cpp  NirnLabCefApp.h  NirnLabCefClient.cpp  NirnLabCefClient.h
src/UIPlatform/Common/: Singleton.h  SpinLock.h  Stopwatch.cpp  Stopwatch.h
src/UIPlatform/Controllers/: PublicAPIController.cpp  PublicAPIController.h
src/UIPlatform/Converters/: CefValueToJSONConverter.cpp  CefValueToJSONConverter.h  KeyInputConverter.cpp  KeyInputConverter.h
src/UIPlatform/Hooks/: CharGeneratorHook.h  ShutdownHook.hpp  WinMainHook.hpp  WinProcHook.cpp  WinProcHook.h
src/UIPlatform/JS/: JSEventFuncInfo.h  JSFunctionStorage.cpp  JSFunctionStorage.h  Types.h
src/UIPlatform/Menus/: CEFMenu.cpp  CEFMenu.h  ISubMenu.h  MultiLayerMenu.cpp  MultiLayerMenu.h
src/UIPlatform/NirnLabUIPlatformAPI/: API.h  DllLoader.h  IBrowser.h  JSTypes.h  SKSELoader.h  Version.h
src/UIPlatform/Providers/: CustomCEFSettingsProvider.cpp  CustomCEFSettingsProvider.h  DefaultCEFSettingsProvider.cpp  DefaultCEFSettingsProvider.h  ICEFSettingsProvider.h
src/UIPlatform/Render/: CEFCopyRenderLayer.cpp  CEFCopyRenderLayer.h  CEFRenderLayer.cpp  CEFRenderLayer.h  CEFSyncCopyRenderLayer.cpp  CEFSyncCopyRenderLayer.h  IRenderLayer.h  IRenderer.h  MultiLayerRenderer.cpp  MultiLayerRenderer.h  RenderData.h
src/UIPlatform/Services/: CEFService.cpp  CEFService.h  InputLangSwitchService.cpp  InputLangSwitchService.h  UIPlatformService.cpp  UIPlatformService.h
src/UIPlatform/Utils/: BSTArrayExtension.h  CheckHresult.h  InputConverter.cpp  InputConverter.h  PathUtils.h
src/UIPlatformTest/: PCH.h  main.cpp
src/UIPlatformTest/NirnLabUIPlatformAPI/: API.cpp  API.h  DllLoader.h  IBrowser.h  JSTypes.h  SKSELoader.h  Settings.h  Version.h
src/UIPlatformTest/TestCases/: LoadYoutubeTestCase.cpp  LoadYoutubeTestCase.h  LocalTestPage.cpp  LocalTestPage.h  TestCases.hpp  _testLocalPage.html
src/UIPlugin/: main.cpp
